<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_table"
        android:padding="30dp">
        <RelativeLayout
            android:id="@+id/rl_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/iv_origin"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:scaleType="fitXY"/>
        <ImageView
            android:id="@+id/iv_idea"
            android:layout_below="@id/iv_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:src="@mipmap/ic_idea"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff0303"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/level"/>
            <TextView
                android:id="@+id/range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/best_range"/>
            <TextView
                android:id="@+id/record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/world_record"/>
            <ImageView
                android:id="@+id/iv_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/sound_off"
                android:layout_marginTop="@dimen/space_mini"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
    <!-- The navigation drawer -->
    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="right"
        android:clickable="true"
        android:background="@drawable/bg_blue"
        android:paddingTop="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tips"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>